new join method